@@ -1,6 +1,6 @@
 Package: Uniquorn
 Title: Identification of cancer cell lines based on their weighted mutational or variational fingerprint
-Version: 1.4.1
+Version: 1.4.2
 Authors@R: person("Raik", "Otto", email = "raik.otto@hu-berlin.de", role = c("aut", "cre"))
 Description: Identifies cancer cell lines with their small variant fingerprint.
  Cancer cell line misidentification and cross-contamination reprents a significant challenge for cancer researchers.
